build: create kwin-binaries only as tests
We don't install them, but still build them as this ensures the full feature
set can be built.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 
 add_subdirectory(minico)
+add_subdirectory(plasma)
 
 set(normalhintsbasesizetest_SRCS normalhintsbasesizetest.cpp)
 add_executable(normalhintsbasesizetest ${normalhintsbasesizetest_SRCS})
