--- a/como/utils/CMakeLists.txt
+++ b/como/utils/CMakeLists.txt
@@ -27,4 +27,5 @@ install(TARGETS utils
   EXPORT como-export
   LIBRARY NAMELINK_SKIP
   FILE_SET HEADERS DESTINATION ${KDE_INSTALL_INCLUDEDIR}/como/utils
+  INCLUDES DESTINATION ${KDE_INSTALL_INCLUDEDIR}
 )
