--- a/como/xwl/CMakeLists.txt
+++ b/como/xwl/CMakeLists.txt
@@ -58,4 +58,5 @@ install(TARGETS xwayland
   EXPORT como-export
   LIBRARY NAMELINK_SKIP
   FILE_SET HEADERS DESTINATION ${KDE_INSTALL_INCLUDEDIR}/como/xwl
+  INCLUDES DESTINATION ${KDE_INSTALL_INCLUDEDIR}
 )
