build: package with CPack
Such packages can be used by downstream projects in our CI. We directly create a new CI
job for that. It creates a Debian package and a simple tar archive.

--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -32,3 +32,9 @@ jobs:
           |scene opengl|opengl shadow|no crash reinit compositor|buffer size change\
           |no crash aurorae destroy deco|slidingpopups|scripted effects|window open close animation\
           |subspace switching animation|minimize animation'"
+
+  package:
+    uses: ./.github/workflows/package.yml
+    needs: build
+    with:
+      image: registry.gitlab.com/kwinft/ci-images/archlinux/kwinft-base-master
