refactor(wl): load plugins dynamically
In the past these plugins were changed to be static in order to improve startup
time. But in order to use them by consumers of the library, we switch back to
dynamic loading. We assume the startup time increase is tolerable.

--- a/plugins/idletime/CMakeLists.txt
+++ b/plugins/idletime/CMakeLists.txt
@@ -6,9 +6,17 @@ set(idletime_plugin_SRCS
     poller.cpp
 )
 
-add_library(KF6IdleTimeComoPlugin OBJECT ${idletime_plugin_SRCS})
-target_compile_definitions(KF6IdleTimeComoPlugin PRIVATE QT_STATICPLUGIN)
+add_library(KF6IdleTimeComoPlugin MODULE ${idletime_plugin_SRCS})
+set_target_properties(KF6IdleTimeComoPlugin PROPERTIES
+  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/kf6/org.kde.kidletime.platforms/"
+)
+
 target_link_libraries(KF6IdleTimeComoPlugin
   KF6::IdleTime
-  base
+  input
+)
+
+install(
+  TARGETS KF6IdleTimeComoPlugin
+  DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf6/org.kde.kidletime.platforms/
 )
