--- a/plugins/effects/CMakeLists.txt
+++ b/plugins/effects/CMakeLists.txt
@@ -49,7 +49,7 @@ function (kwin_strip_builtin_effect_metadata target metadata)
 endfunction()
 
 macro(kwin_add_builtin_effect name)
-    kcoreaddons_add_plugin(${name} STATIC SOURCES ${ARGN} INSTALL_NAMESPACE "kwin/effects/plugins")
+    kcoreaddons_add_plugin(${name} SOURCES ${ARGN} INSTALL_NAMESPACE "kwin/effects/plugins")
     target_compile_definitions(${name} PRIVATE -DTRANSLATION_DOMAIN=\"kwin\")
     kwin_strip_builtin_effect_metadata(${name} metadata.json)
     install(FILES metadata.json DESTINATION ${KDE_INSTALL_DATADIR}/kwin/builtin-effects/ RENAME ${name}.json)
