ci: lint commit messages on pull requests with wagoid action
Our custom code for message linting only works on push events. For pull
requests we would require to adapt the code. Or we can use an already available
action from the market place, what we try to do with this commit.

--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -13,7 +13,8 @@ on:
         default: 'master'
 jobs:
   message-lint:
-    name: Commit Message Lint
+    if: github.event_name != 'pull_request'
+    name: On Push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -36,3 +37,15 @@ jobs:
         run: >
           commitlint --verbose --config=tooling/docs/commitlint.config.js
           --from=_upstream/${{ inputs.upstream-branch }}
+
+  message-lint-pr:
+    if: github.event_name == 'pull_request'
+    name: On Pull Request
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - uses: wagoid/commitlint-github-action@v5
+        with:
+          configFile: tooling/docs/commitlint.config.js
+          helpURL: https://github.com/winft/como/blob/master/CONTRIBUTING.md#commit-message-guideline
