--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -38,3 +38,4 @@ jobs:
     needs: build
     with:
       image: registry.gitlab.com/kwinft/ci-images/archlinux/kwinft-base-master
+      package-name: como
