build: include ECM sanitizers support
This makes it easy to compile with sanitizers. For example like this:

    ECM_ENABLE_SANITIZERS='address;leak;undefined'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ include(ECMConfiguredInstall)
 include(ECMQmlModule)
 include(ECMGenerateQmlTypes)
 include(ECMSetupVersion)
+include(ECMEnableSanitizers)
 
 ecm_setup_version(PROJECT
   VARIABLE_PREFIX COMO
