--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -15,6 +15,7 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       image: registry.gitlab.com/kwinft/ci-images/archlinux/kwinft-base-master
+      cmake-preset: coverage
 
   install:
     uses: ./.github/workflows/install.yml
