build: remove KDECMakeSettings include
The include comes with a lot of instructions. We don't need most of them, so
just do the little we rely on ourselves in a separate include.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,12 +54,10 @@ set_package_properties(Qt6Test PROPERTIES
     TYPE OPTIONAL
 )
 add_feature_info("Qt6Test" Qt6Test_FOUND "Required for building tests")
-if (NOT Qt6Test_FOUND)
-    set(BUILD_TESTING OFF CACHE BOOL "Build the testing tree.")
-endif()
 
 include(KDEInstallDirs)
-include(KDECMakeSettings)
+include(CMakeSettings)
+include(CTest)
 
 include(ECMInstallIcons)
 include(ECMOptionalAddSubdirectory)
