ci: add gcc build
Test building with gcc too.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
         description: Artifact name of build dir
         required: false
         type: string
-        default: 'build'
+        default: ''
       cmake-preset:
         description: Specify CMake preset to use
         required: false
@@ -40,8 +40,10 @@ jobs:
       - name: Build
         run: cmake --build build
       - name: Tar artifact (keep permissions)
+        if: ${{ inputs.artifact-name != '' }}
         run: tar -czf build-dir.tar build
       - name: Upload artifact
+        if: ${{ inputs.artifact-name != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
