build: add release preset
This can be used to simply build the libraries without any tests and warnings.
We build in the CI this preset as well and use it for our weekly rebuilds.

The preset actually sets the build type to "RelWithDebInfo" to produce better
backtraces.

--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -18,11 +18,14 @@ jobs:
       artifact-name: clang-build
       cmake-preset: coverage
 
-  gcc-build:
+  secondary-builds:
+    strategy:
+      matrix:
+        preset: [gcc, release]
     uses: ./.github/workflows/build.yml
     with:
       image: registry.gitlab.com/kwinft/ci-images/archlinux/kwinft-base-master
-      cmake-preset: gcc
+      cmake-preset: ${{ matrix.preset }}
 
   install:
     uses: ./.github/workflows/install.yml
