--- a/como-config.cmake.in
+++ b/como-config.cmake.in
@@ -4,6 +4,7 @@ include(CMakeFindDependencyMacro)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/modules/")
 
 find_dependency(Wrapland)
+find_dependency(epoxy)
 find_dependency(Pixman)
 find_dependency(wlroots @WLROOTS_MIN_VERSION@)
 find_dependency(Qt6Gui @QT_MIN_VERSION@)
