--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,7 @@ if (${wlroots_VERSION} VERSION_GREATER_EQUAL 0.18)
   set(WLR_HAVE_SESSION_CREATE_LOOP 1)
   set(WLR_HAVE_UTIL_TRANSFORM_HEADER 1)
   set(WLR_HAVE_NEW_PIXEL_COPY_API 1)
+  set(WLR_HAVE_BACKEND_CREATE_WITH_LOOP 1)
 endif()
 
 find_package(X11)
