build: move Minico to the examples directory
It is more an example of how to use The Compositor Modules, not a test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,6 +343,8 @@ if (BUILD_TESTING)
     add_subdirectory(tests)
 endif()
 
+add_subdirectory(examples)
+
 if (KF6DocTools_FOUND)
     add_subdirectory(docs)
 endif()
