build: create release 0.1.0
Update changelog. The reference commit is the last commit that is shared with
the Theseus' Ship code base.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,7 +261,7 @@ set_package_properties(Fontconfig PROPERTIES
     PURPOSE "Needed for own QPA plugin."
 )
 
-find_package(Wrapland REQUIRED)
+find_package(Wrapland 0.600.0 REQUIRED)
 set_package_properties(Wrapland PROPERTIES
     TYPE REQUIRED
     PURPOSE "Used as Wrapper library for Wayland protocol objects."
