--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2024 Roman Gilg <subdiff@gmail.com>
+# SPDX-License-Identifier: MIT
 name: Main Checks
 on:
   - push
@@ -7,6 +9,13 @@ jobs:
     uses: ./.github/workflows/commit-lint.yml
     with:
       upstream-repo: https://github.com/winft/como.git
+
+  reuse:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: REUSE Compliance
+      uses: fsfe/reuse-action@v2
 
   clang-format:
     uses: ./.github/workflows/clang-format.yml
