--- a/como-config.cmake.in
+++ b/como-config.cmake.in
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2024 Roman Gilg <subdiff@gmail.com>
+# SPDX-License-Identifier: GPL-2.0-or-later
+
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
