build: remove CMake file in data/icons
We can do this simply from the parent directory.

--- a/como/data/CMakeLists.txt
+++ b/como/data/CMakeLists.txt
@@ -1,8 +1,15 @@
 # SPDX-FileCopyrightText: 2023 Roman Gilg <subdiff@gmail.com>
-#
 # SPDX-License-Identifier: GPL-2.0-or-later
 
-add_subdirectory(icons)
+ecm_install_icons(
+  ICONS
+    icons/16-apps-kwin.png
+    icons/32-apps-kwin.png
+    icons/48-apps-kwin.png
+    icons/sc-apps-kwin.svgz
+  DESTINATION ${KDE_INSTALL_ICONDIR}
+  THEME hicolor
+)
 
 ########### next target ###############
 add_executable(kwin5_update_default_rules update_default_rules.cpp)
