ci: prepare to run clang-tidy
Add infrastructure and a CI job to run the static analysis tool clang-tidy. For
now we only enable two checks. The goal is to progressively enable more checks
until we at least cover all the default checks.

For now the ci job is stopping short of actually running clang-tidy though
because the GitHub Actions runner consistently terminate likely due to oom.

Locally clang-tidy can be run with the new Python script in tooling/analysis.

--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -61,6 +61,13 @@ jobs:
           |no crash aurorae destroy deco|slidingpopups|scripted effects|window open close animation\
           |subspace switching animation|minimize animation'"
 
+  clang-tidy:
+    uses: ./.github/workflows/clang-tidy.yml
+    needs: clang-build
+    with:
+      image: registry.gitlab.com/kwinft/ci-images/archlinux/kwinft-base-master
+      artifact-name: clang-build
+
   package:
     uses: ./.github/workflows/package.yml
     needs: clang-build
