ci: upload coverage report to Codecov
Uses the Codecov action. According to documentation a token is not necessary on
pull requests. But to allow the workflow to pass when running it in a fork on
simple push events, in contrast to the dcomentation we disallow it for other
repos than winft/como when not being a pull request.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,3 +56,11 @@ jobs:
         shell: bash
       - name: Generate a code coverage report
         uses: ./.github/actions/coverage
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v4
+        if: github.repository == 'winft/como' || github.event_name == 'pull_request'
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage.xml
+          fail_ci_if_error: true
+          verbose: true
