ci: pass Codecov token as environment variable
Passing it as an input does not seem to work in workflow_calls for unknown
reasons. [1] Instead we try to pass it as an environment variable what is also
possible according to the action documentation. [2]

[1] https://github.com/codecov/codecov-action/issues/1292#issuecomment-1942100350
[2] https://github.com/codecov/codecov-action/blob/54bcd87/README.md#usage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,8 @@ jobs:
         uses: codecov/codecov-action@v4
         if: github.repository == 'winft/como' || github.event_name == 'pull_request'
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.xml
           fail_ci_if_error: true
           verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
