build: run tests also on release build
In general tests should be run in release build configuration. On CI we now run
them in both configurations, release and debug, to get more information.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,11 @@ on:
         required: false
         type: string
         default: ''
+      cmake-args:
+        description: Specify additional CMake arguments
+        required: false
+        type: string
+        default: ''
 jobs:
   build:
     name: Build
@@ -38,7 +43,7 @@ jobs:
         if: ${{ inputs.cmake-preset != '' }}
         run: echo "cmake-preset=--preset ${{ inputs.cmake-preset }}" >> $GITHUB_ENV
       - name: Configure
-        run: cmake ${{ env.cmake-preset }} -S . -B build
+        run: cmake ${{ env.cmake-preset }} ${{ inputs.cmake-args }} -S . -B build
       - name: Build
         run: cmake --build build
       - name: Tar artifact (keep permissions)
