build: reduce dependencies
The KF6::ConfigWidget dependency can be replaced with smaller ones.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,8 @@ ecm_setup_version(PROJECT
 # required frameworks by Core
 find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS
     Auth
+    ColorScheme
     Config
-    ConfigWidgets
     CoreAddons
     Crash
     GlobalAccel
