--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -22,7 +22,9 @@ jobs:
         run: echo "result=${{ env.result }}" >> $GITHUB_OUTPUT
 
   message-lint:
+    if: endsWith(needs.get.outputs.image, '-master')
     uses: ./.github/workflows/commit-lint.yml
+    needs: get
     with:
       upstream-repo: https://github.com/winft/como.git
 
